--- a/source/Maven_Java_Projects/Library_Management_System/src/main/resources/com/lms/library_management_system/signupPage.fxml
+++ b/source/Maven_Java_Projects/Library_Management_System/src/main/resources/com/lms/library_management_system/signupPage.fxml
@@ -1,70 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="signupAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="371.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.library_management_system.LoginController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="144.0" prefWidth="375.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.library_management_system.LoginController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="386.4000244140625" minWidth="10.0" prefWidth="103.80000000000001" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="487.9999877929687" minWidth="10.0" prefWidth="271.8" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <Label layoutX="237.0" layoutY="55.0" prefHeight="18.0" prefWidth="158.0" text="Signup">
-         <font>
-            <Font size="20.0" />
-         </font></Label>
-      <GridPane alignment="CENTER" layoutX="102.0" layoutY="110.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="186.0" prefWidth="417.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="146.39996337890625" minWidth="9.599951171875006" prefWidth="106.39998474121094" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="339.20005187988284" minWidth="10.0" prefWidth="333.6000152587891" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label prefHeight="38.0" prefWidth="118.0" text="Worker ID">
-               <font>
-                  <Font name="Times New Roman" size="15.0" />
-               </font>
-            </Label>
-            <Label prefHeight="38.0" prefWidth="182.0" text="Full name" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Times New Roman" size="15.0" />
-               </font>
-            </Label>
-            <Label prefHeight="66.0" prefWidth="124.0" text="Email address" GridPane.rowIndex="2">
-               <font>
-                  <Font name="Times New Roman" size="15.0" />
-               </font>
-            </Label>
-            <TextField fx:id="workerIDTextField" prefHeight="0.0" prefWidth="294.0" GridPane.columnIndex="1" />
-            <TextField fx:id="fullNameTextFieldl" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="emailAddressTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label fx:id="positionTextField" prefHeight="82.0" prefWidth="124.0" text="Position" GridPane.rowIndex="3">
-               <font>
-                  <Font name="Times New Roman" size="15.0" />
-               </font>
-            </Label>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label prefHeight="89.0" prefWidth="124.0" text="Password" GridPane.rowIndex="4">
-               <font>
-                  <Font name="Times New Roman" size="15.0" />
-               </font>
-            </Label>
-            <TextField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-         </children>
-      </GridPane>
-      <Button fx:id="signupSubmitButton" layoutX="285.0" layoutY="312.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="137.0" text="Submit">
-         <font>
-            <Font name="Times New Roman" size="16.0" />
-         </font>
-      </Button>
-      <Button fx:id="gobackButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="&lt;-" />
+      <Label fx:id="sginUp_idNum_label" prefHeight="90.0" prefWidth="210.0" text="Id number" />
+      <Label prefHeight="99.0" prefWidth="194.0" text="User name" GridPane.rowIndex="3" />
+      <Label prefHeight="52.0" prefWidth="242.0" text="Password" GridPane.rowIndex="4" />
+      <TextField fx:id="sginUp_idNum_tf" GridPane.columnIndex="1" />
+      <TextField fx:id="sginUp_userName_tf" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <PasswordField fx:id="sginUp_password_tf" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Label prefHeight="42.0" prefWidth="89.0" text="Full name" GridPane.rowIndex="1" />
+      <Label layoutX="10.0" layoutY="38.0" prefHeight="42.0" prefWidth="89.0" text="Email" GridPane.rowIndex="2" />
+      <TextField fx:id="sginUp_fullName_tf" layoutX="99.0" layoutY="12.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <TextField fx:id="sginUp_email_tf" layoutX="99.0" layoutY="40.0" prefHeight="26.0" prefWidth="415.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
    </children>
-</AnchorPane>
+</GridPane>
